--- a/models/FM.ipynb
+++ b/models/FM.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -18,6 +27,29 @@
     "\n",
     "import warnings as w\n",
     "w.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8049815545752392"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_label = np.array(pd.read_csv('../data/test.csv').values[..., -1], dtype=np.int32)\n",
+    "out_label = np.array(pd.read_csv('../data/submit_MLP.csv').values[..., -1], dtype=np.int32)\n",
+    "F1, acc = F1_accuracy(out_label, test_label)\n",
+    "acc"
    ]
   },
   {
@@ -228,19 +260,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from imblearn.over_sampling import SMOTE"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,96 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = pd.read_csv('../data/train.csv').drop(columns=['id', 'user_id'])\n",
-    "columns = data.columns\n",
-    "data.replace('Male', 1., inplace=True)\n",
-    "data.replace('Female', 0., inplace=True)\n",
-    "data.dropna(inplace=True)\n",
-    "data['date'] = pd.to_datetime(data['date'], format=\"%Y/%m/%d %H:%M\")\n",
-    "data['date'] = data['date'].dt.hour"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm = SMOTE()\n",
-    "data = data.values\n",
-    "labels = data[..., -1]\n",
-    "train = data[..., :-1]\n",
-    "X_res, y_res = sm.fit_resample(train, labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Before transform: {labels.shape}, after transform: {y_res.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe = pd.DataFrame(data_all, columns=columns)\n",
-    "dataframe.to_csv('../data/balanced_data_1_1.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm = SMOTE(random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_label = np.array([0] * 90 + [1] * 10)\n",
-    "test_sample = np.random.rand(100, 2)\n",
-    "X_res, y_res = sm.fit_resample(test_sample, test_label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from imblearn.over_sampling import SMOTE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "from utils.utils import thresholding, F1_accuracy\n",
+    "from sklearn.ensemble import AdaBoostClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +304,7 @@
     "    \"\"\"\n",
     "    data_all = data.values\n",
     "    train, labels = data_all[..., :-1], data_all[..., -1]\n",
-    "    sm = SMOTE(random_state=42)\n",
+    "    sm = SMOTE(sampling_strategy=1., random_state=42)\n",
     "    X_res, y_res = sm.fit_resample(train, labels)\n",
     "    combined = np.array(np.hstack((X_res, y_res[:, np.newaxis])), dtype=np.int32)\n",
     "    np.random.shuffle(combined)\n",
@@ -369,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,33 +328,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "balanced_data = balance_data(data)"
+    "balanced_data = balance_data(data).values\n",
+    "test = pd.read_csv('../data/test.csv').drop(columns=['id', 'user_id'])\n",
+    "test.replace('Male', 1., inplace=True)\n",
+    "test.replace('Female', 0., inplace=True)\n",
+    "test.fillna(method='ffill', inplace=True)\n",
+    "test['date'] = pd.to_datetime(test['date'], format=\"%m-%d %H:%M\")\n",
+    "test['date'] = test['date'].dt.hour\n",
+    "test_data, test_label = test.values[..., :-1], test.values[..., -1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = AdaBoostClassifier(n_estimators=200)\n",
+    "clf.fit(balanced_data[..., :-1], balanced_data[..., -1])\n",
+    "prediction = clf.predict(test_data)\n",
+    "F1, acc = F1_accuracy(prediction, test_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "280104"
+       "0.9379305007352372"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_value = balanced_data.values\n",
-    "data_label = data_value[..., -1]\n",
-    "np.count_nonzero(data_label)"
+    "F1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = clf.predict(test_data)\n",
+    "F1, acc = F1_accuracy(prediction, test_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0025210802187784873"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_train = clf.predict(balanced_data[..., :-1])\n",
+    "F1, acc = F1_accuracy(prediction_train, balanced_data[..., -1])\n",
+    "F1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666428659831111"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc"
    ]
   }
  ],
